# ultimate_cpp_course

./: .gitattributes  .gitignore  README.md
lab/lab1/basic_io/example1/: CMakeLists.txt  main.cpp
lab/lab1/basic_io/example2/: CMakeLists.txt  main.cpp
lab/lab1/tax_table/: CMakeLists.txt  main.cpp
lab/lab1/wordlength/: CMakeLists.txt  main.cc  test_text.txt
lab/lab2/catch_tutorial/: main.cc  main.h
lab/lab2/time/: Erik_question.md
project/CasAdi/cpp/: CMakeLists.txt  main.cpp  main.py  requirements.txt
project/CasAdi/matlab/: RunME.m  fl_prtcl_obsavoid_elp.m  notes  plottingrest_fric.m  plottingrest_rate.m  plottingrest_report_fep.m  plottingrest_report_fep_detailed.m  rl_prtcl_obsavoid_elp.m
project/cpp/pmsm_simulation/: CMakeLists.txt  main.cc  main.py  requirements.txt
project/cpp/pmsm_simulation/cpp/: CMakeLists.txt  main.cc
project/cpp/pmsm_simulation/cpp/inc/: pmsm.h
project/cpp/pmsm_simulation/matlab/: PMSM.m  main.m
project/cpp/pmsm_simulation/python/: main.py
project/cpp/pmsm_simulation/simulink/: simulink_main.slx  simulink_run.m
project/cpp/simple_simulation/: CMakeLists.txt  RLC_sim.cc  plots.py
project/pmsm_simulation/: requirements.txt
project/pmsm_simulation/cpp/: CMakeLists.txt  main.cc
project/pmsm_simulation/cpp/inc/: pmsm.h  simulators.h  timer.h
project/pmsm_simulation/cpp/src/: pmsm.cc
project/pmsm_simulation/matlab/: RunkeKutta4.m
project/pmsm_simulation/matlab_codegen/: pmsm.m  pmsm_test.m
project/pmsm_simulation/matlab_codegen/codegen/exe/pmsm/: CMakeLists.txt  CoderTimeAPI.cpp  CoderTimeAPI.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  gcGuiReport.mat  main.cc  pmsm.cpp  pmsm.h  pmsm_data.cpp  pmsm_data.h  pmsm_initialize.cpp  pmsm_initialize.h  pmsm_terminate.cpp  pmsm_terminate.h  pmsm_types.h  rtw_proj.tmw  rtwtypes.h  tic.cpp  tic.h  toc.cpp  toc.h
project/pmsm_simulation/matlab_codegen/codegen/exe/pmsm/html/: report.mldatx
project/pmsm_simulation/python/: main.py
project/pmsm_simulation/results/: plots.py
project/simple_simulation/: json_eigen_test.cc  json_valarray_test.cc  lpd_ode1.cc  main.cc  simulators.cc
